--- a/index.html
+++ b/index.html
@@ -5,38 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
+
   <title>component</title>
 
 </head>
 <body>
 
-  Your Result
+  <header class="header">
+    <h3> Your Result </h3>
+    <div class="circle">
+      <p> 76 </p>
+      <p class=" sub__circle"> of 100 </p>
+    </div>
 
-  of 100
+    <h3 class="Spacial__Head"> Great </h3>
+   
+    <p class="Spacial__para"> You scored higher than 65% of the people who have taken these tests here!</p>
+  </header>
+  <main class="main">
+    <h3> Summary </h3>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
+    <p> Reaction  80 / 100 </p>
   
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
+    <p> Memory 92 / 100 </p>
   
-  <div class="attribution">
+    <p> Verbal 61 / 100</p>
+  
+    <p> Visual 72 / 100 </p>
+  
+    <p> Continue </p> 
+  </main>
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#"> Daniel Kaboto </a>.
+  </footer>
 </body>
 </html>
