--- a/index.html
+++ b/index.html
@@ -26,23 +26,16 @@
    
     <p class="Spacial__para"> You scored higher than 65% of the people who have taken these tests here!</p>
   </header>
-  <main class="main">
-    <h3> Summary </h3>
-
-    <p> Reaction  80 / 100 </p>
-  
-    <p> Memory 92 / 100 </p>
-  
-    <p> Verbal 61 / 100</p>
-  
-    <p> Visual 72 / 100 </p>
-  
-    <p> Continue </p> 
+  <main class="main"> 
+    
   </main>
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#"> Daniel Kaboto </a>.
   </footer>
+
+
+  <script src="scripts.js"></script>
 </body>
 </html>
