--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </main>
   </div>
  
-  <footer class="attribution">
+  <!-- <footer class="attribution">
     &#9400  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#"> Daniel Kaboto </a>.
-  </footer>
+  </footer> -->
 
 
   <script src="scripts.js"></script>
